--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-    <script src="/secrets.js"></script>
     <title></title>
   </head>
   <body>
@@ -14,12 +13,12 @@
     <script>
       // Initialize Firebase
       var config = {
-        apiKey: windows.apiKey,
+        apiKey: "AIzaSyDrPvXENP3uRPB2dKcxioHyaxLS5d5GO3E",
         authDomain: "chatastrophe-335c8.firebaseapp.com",
         databaseURL: "https://chatastrophe-335c8.firebaseio.com",
         projectId: "chatastrophe-335c8",
         storageBucket: "chatastrophe-335c8.appspot.com",
-        messagingSenderId: window.messagingSenderId
+        messagingSenderId: "1059228917362"
       };
       window.firebase = firebase;
       firebase.initializeApp(config);
